[gd_scene load_steps=14 format=4 uid="uid://cg250eh8iw1d8"]

[ext_resource type="Script" path="res://scenes/maps/lich_lair/lich_lair.gd" id="1_c37e1"]
[ext_resource type="TileSet" uid="uid://bi1sqolcx1yl3" path="res://assets/tilemaps/crypt/tileset.tres" id="2_pmap1"]
[ext_resource type="PackedScene" uid="uid://dw2rjpkqgwb0d" path="res://scenes/props/snatching_altar/snatching_altar.tscn" id="3_67fs2"]
[ext_resource type="PackedScene" uid="uid://cugvd613165k1" path="res://scenes/props/book/book.tscn" id="4_dbjdk"]
[ext_resource type="PackedScene" uid="uid://bgb337k67ojgp" path="res://scenes/characters/vampire/vampire.tscn" id="5_twcoo"]
[ext_resource type="PackedScene" uid="uid://lrvyjg12k6at" path="res://scenes/user_interface/markers/exclamation_marker/exclamation_mark.tscn" id="6_3vlo2"]
[ext_resource type="Script" path="res://scenes/user_interface/markers/exclamation_marker/altar_marker.gd" id="7_mvla2"]
[ext_resource type="PackedScene" uid="uid://dgdcwonepqbr5" path="res://scenes/user_interface/markers/go_right_marker/go_right_marker.tscn" id="8_0cija"]
[ext_resource type="Script" path="res://scenes/maps/lich_lair/canvas_layer.gd" id="9_a2ftn"]
[ext_resource type="Theme" uid="uid://dooikrh66gno7" path="res://assets/themes/invisible_buttons.tres" id="10_d2kn4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1jt2e"]
size = Vector2(8, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w3mv4"]
size = Vector2(8, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_urin5"]
size = Vector2(8, 8)

[node name="LichLair" type="Node2D"]
script = ExtResource("1_c37e1")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(20000, 20000)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10000.0
offset_top = -10000.0
offset_right = 10000.0
offset_bottom = 10000.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Ground" type="TileMapLayer" parent="."]
position = Vector2(-4, -4)
tile_map_data = PackedByteArray("AADt//n/AgAHAAEAAADt//r/AgAHAAIAAADt//v/AgAHAAMAAADu//n/AgAHAAEAAADu//r/AgAHAAIAAADu//v/AgAHAAMAAADv//n/AgAHAAEAAADv//r/AgAHAAIAAADv//v/AgAHAAMAAADw//n/AgAHAAEAAADw//r/AgAHAAIAAADw//v/AgAHAAMAAADx//n/AgANAAUAAADx//r/AgAHAAIAAADx//v/AgAHAAMAAADy//n/AgAHAAYAAADy//r/AgAHAAcAAADy//v/AgAHAAgAAADz//j/AgAUAAQAAADz//n/AgAHAAIAAADz//r/AgAHAAMAAADz//v/AgAnABIAAAD0//j/AgAUAAQAAAD0//n/AgAHAAIAAAD0//r/AgAHAAMAAAD0//v/AgAxABIAAAD1//j/AgAUAAQAAAD1//n/AgAvABUAAAD1//r/AgAvABYAAAD1//v/AgAvABcAAAD2//j/AgAUAAQAAAD2//n/AgAxABUAAAD2//r/AgAxABYAAAD2//v/AgAxABcAAAD3//j/AgAVAAQAAAD3//n/AgAVAAUAAAD3//r/AgArABUAAAD3//v/AgArABYAAAD4//n/AgAHAAEAAAD4//r/AgAtABUAAAD4//v/AgAtABYAAAD5//n/AgAHAAEAAAD5//r/AgAHAAMAAAD5//v/AgAvABIAAAD6//n/AgAHAAEAAAD6//r/AgAHAAMAAAD6//v/AgAxABIAAADr//n/AgAHAAEAAADr//r/AgAHAAIAAADr//v/AgAHAAMAAADs//n/AgAHAAEAAADs//r/AgAHAAIAAADs//v/AgAHAAMAAADx//j/AgANAAQAAADy//j/AgAHAAUAAAD///r/AgAHAAIAAAD///v/AgAHAAMAAAD///j/AgAHAAIAAAD///n/AgAHAAMAAAAAAPj/AgAHAAIAAAAAAPn/AgAHAAMAAAAAAPr/AgAHAAIAAAAAAPv/AgAHAAMAAAABAPr/AgAHAAIAAAABAPv/AgAHAAMAAAABAPj/AgAHAAIAAAABAPn/AgAHAAMAAAD+//j/AgAHAAIAAAD+//n/AgAHAAMAAAD+//r/AgAHAAIAAAD+//v/AgAHAAMAAAACAPr/AgAHABUAAAACAPv/AgAHABYAAAACAPj/AgAHABUAAAACAPn/AgAHABYAAAD9//f/AgANABcAAAD9//j/AgANABgAAAD7//j/AgANABcAAAD7//n/AgANABgAAAD8//j/AgAOABcAAAADAPf/AgAVABcAAAADAPj/AgAVABgAAAAFAPj/AgAVABcAAAAFAPn/AgAVABgAAAAEAPj/AgAUABcAAAACAPf/AgARABcAAAABAPf/AgARABcAAAAAAPf/AgARABcAAAD///f/AgARABcAAAD+//f/AgARABcAAAD7//r/AgAHABUAAAD7//v/AgAHABYAAAD8//r/AgAHABYAAAD8//v/AgAHABYAAAD9//r/AgAHABYAAAD9//v/AgAHABYAAAD9//n/AgAHABUAAAD8//n/AgAHABUAAAADAPr/AgAHABYAAAADAPv/AgAHABYAAAAEAPr/AgAHABYAAAAEAPv/AgAHABYAAAAEAPn/AgAHABUAAAADAPn/AgAHABUAAAAFAPr/AgAHABUAAAAFAPv/AgAHABYAAAAGAPr/AgAvABUAAAAGAPv/AgAvABYAAAAHAPr/AgAwABUAAAAHAPv/AgAwABYAAAAIAPr/AgAxABUAAAAIAPv/AgAxABYAAAAJAPr/AgArABYAAAAJAPv/AgArABcAAAAKAPr/AgAtABYAAAAKAPv/AgAtABcAAAALAPr/AgAHABUAAAALAPv/AgAvABIAAAAMAPr/AgAHABUAAAAMAPv/AgAxABIAAAANAPr/AgAHABUAAAANAPv/AgAHABYAAAAOAPr/AgAHAAYAAAAOAPv/AgAHAAcAAAAGAPn/AgARABcAAAAHAPn/AgARABcAAAAIAPn/AgANAAUAAAAJAPn/AgArABUAAAAKAPn/AgAtABUAAAALAPn/AgAVAAUAAAAMAPn/AgARABcAAAANAPn/AgARABcAAAAOAPn/AgAHAAUAAAAPAPn/AgANAAUAAAAPAPr/AgAHABUAAAAPAPv/AgAHABYAAAALAPj/AgAVAAQAAAAIAPj/AgANAAQAAAAJAPj/AgARAAQAAAAKAPj/AgARAAQAAADy//z/AgAHAAYAAADy//3/AgAHAAcAAADy//7/AgAHAAgAAADy////AgAHAAYAAADy/wAAAgAHAAcAAADy/wEAAgAHAAgAAADy/wIAAgAHAAYAAADy/wMAAgAHAAcAAADy/wQAAgAHAAgAAADy/wUAAgAHAAYAAADy/wYAAgAHAAYAAADy/wcAAgAHAAcAAAAOAPz/AgAHAAgAAAAOAP3/AgAHAAYAAAAOAP7/AgARAAgAAAAOAP//AgARAAkAAAAOAAAAAgARAAoAAAAOAAEAAgARAAsAAAAOAAIAAgARAAwAAAAOAAMAAgARAA0AAAAOAAQAAgARAA4AAAAOAAUAAgAHAAgAAAAOAAYAAgAHAAYAAAAOAAcAAgAHAAcAAAAOAAgAAgAHAA0AAADy/wgAAgAEAA0AAADz/wgAAgAFAA0AAAD0/wgAAgAFAA0AAAD1/wgAAgAGAA0AAAD2/wgAAgAFAA0AAAD3/wgAAgAGAA0AAAD4/wgAAgAFAA0AAAD5/wgAAgAGAA0AAAD6/wgAAgAFAA0AAAD7/wgAAgAGAA0AAAD8/wgAAgAFAA0AAAD9/wgAAgAGAA0AAAD+/wgAAgAFAA0AAAD//wgAAgAGAA0AAAAAAAgAAgAFAA0AAAABAAgAAgAGAA0AAAACAAgAAgAFAA0AAAADAAgAAgAGAA0AAAAEAAgAAgAFAA0AAAAFAAgAAgAGAA0AAAAGAAgAAgAFAA0AAAAHAAgAAgAGAA0AAAAIAAgAAgAFAA0AAAAJAAgAAgAGAA0AAAAKAAgAAgAFAA0AAAALAAgAAgAGAA0AAAAMAAgAAgAFAA0AAAANAAgAAgAGAA0AAAD+//3/AgAhAEEAAAD+//7/AgAhAEIAAAD///3/AgAiAEEAAAD///7/AgAiAEIAAAABAP3/AgAhAEEAAAABAP7/AgAhAEIAAAACAP3/AgAiAEEAAAACAP7/AgAiAEIAAAD8/wAAAgAhAEEAAAD8/wEAAgAhAEIAAAD9/wAAAgAiAEEAAAD9/wEAAgAiAEIAAAADAAAAAgAhAEEAAAADAAEAAgAhAEIAAAAEAAAAAgAiAEEAAAAEAAEAAgAiAEIAAAD+/wMAAgAhAEEAAAD+/wQAAgAhAEIAAAD//wMAAgAiAEEAAAD//wQAAgAiAEIAAAABAAMAAgAhAEEAAAABAAQAAgAhAEIAAAACAAMAAgAiAEEAAAACAAQAAgAiAEIAAAD3//z/AgARAEEAAAD3//3/AgARAEIAAAD4//z/AgASAEEAAAD4//3/AgASAEIAAAD5/wIAAgARAEEAAAD5/wMAAgARAEIAAAD6/wIAAgASAEEAAAD6/wMAAgASAEIAAAD0/wUAAgARAEEAAAD0/wYAAgARAEIAAAD1/wUAAgASAEEAAAD1/wYAAgASAEIAAAAIAAQAAgARAEEAAAAIAAUAAgARAEIAAAAJAAQAAgASAEEAAAAJAAUAAgASAEIAAAALAP7/AgARAEEAAAALAP//AgARAEIAAAAMAP7/AgASAEEAAAAMAP//AgASAEIAAAAFAAAAAgAjAD4AAAAFAAEAAgAjAD8AAAD7/wAAAgAhAD4AAAD7/wEAAgAhAD8AAAD9/wMAAgAhAD4AAAD9/wQAAgAhAD8AAAADAAMAAgAjAD4AAAADAAQAAgAjAD8AAAADAP3/AgAjAD4AAAADAP7/AgAjAD8AAAD9//3/AgAhAD4AAAD9//7/AgAhAD8AAAD+//z/AgAhADwAAAD///z/AgAiADwAAAABAPz/AgAkADwAAAACAPz/AgAlADwAAAD1/wAAAgAZADwAAAD2/wAAAgAaADwAAAD6/wYAAgAZADwAAAD7/wYAAgAaADwAAAAJAAEAAgAZADwAAAAKAAEAAgAaADwAAAAHAP3/AgAZADwAAAAIAP3/AgAaADwAAAALAAYAAgAZADwAAAAMAAYAAgAaADwAAAD4/wQAAgAZAD4AAAD4/wUAAgAZAD8AAAD0/wEAAgAZAD4AAAD0/wIAAgAZAD8AAAD6//z/AgAZAD4AAAD6//3/AgAZAD8AAAD//wAAAgAZAD4AAAD//wEAAgAZAD8AAAAEAAUAAgAZAD4AAAAEAAYAAgAZAD8AAAAHAAEAAgAZAD4AAAAHAAIAAgAZAD8AAAD2/wcAAgARADwAAAD3/wcAAgASADwAAAD1/wMAAgARADwAAAD2/wMAAgASADwAAAD6////AgARADwAAAD7////AgASADwAAAADAAIAAgARADwAAAAEAAIAAgASADwAAAD+////AgARADwAAAD/////AgASADwAAAAKAPz/AgARAD4AAAAKAP3/AgARAD8AAAANAP//AgARAD4AAAANAAAAAgARAD8AAADz//z/AgARAD4AAADz//3/AgARAD8AAAD4/wEAAgARAD4AAAD4/wIAAgARAD8AAAD0//7/AgAMAEEAAAD0////AgAMAEIAAAD1//7/AgANAEEAAAD1////AgANAEIAAAAFAAYAAgAGAEEAAAAFAAcAAgAGAEIAAAAGAAYAAgAHAEEAAAAGAAcAAgAHAEIAAAALAAIAAgAGAEEAAAALAAMAAgAGAEIAAAAMAAIAAgAHAEEAAAAMAAMAAgAHAEIAAAAFAP3/AgAGAEEAAAAFAP7/AgAGAEIAAAAGAP3/AgAHAEEAAAAGAP7/AgAHAEIAAAAAAAEAAgAGAEEAAAAAAAIAAgAGAEIAAAABAAEAAgAHAEEAAAABAAIAAgAHAEIAAAD//wUAAgAGAEEAAAD//wYAAgAGAEIAAAAAAAUAAgAHAEEAAAAAAAYAAgAHAEIAAAACAAYAAgAGAEEAAAACAAcAAgAGAEIAAAADAAYAAgAHAEEAAAADAAcAAgAHAEIAAAD8/wYAAgAGAEEAAAD8/wcAAgAGAEIAAAD9/wYAAgAHAEEAAAD9/wcAAgAHAEIAAAD5/wQAAgAGAEEAAAD5/wUAAgAGAEIAAAD6/wQAAgAHAEEAAAD6/wUAAgAHAEIAAAD5/wAAAgAGAEEAAAD5/wEAAgAGAEIAAAD6/wAAAgAHAEEAAAD6/wEAAgAHAEIAAAD3//7/AgAGAEEAAAD3////AgAGAEIAAAD4//7/AgAHAEEAAAD4////AgAHAEIAAAD2/wQAAgAGAEEAAAD2/wUAAgAGAEIAAAD3/wQAAgAHAEEAAAD3/wUAAgAHAEIAAAD2/wEAAgAGAEEAAAD2/wIAAgAGAEIAAAD3/wEAAgAHAEEAAAD3/wIAAgAHAEIAAADz/wMAAgAGAEEAAADz/wQAAgAGAEIAAAD0/wMAAgAHAEEAAAD0/wQAAgAHAEIAAAAGAAMAAgAGAEEAAAAGAAQAAgAGAEIAAAAHAAMAAgAHAEEAAAAHAAQAAgAHAEIAAAAJAAYAAgAGAEEAAAAJAAcAAgAGAEIAAAAKAAYAAgAHAEEAAAAKAAcAAgAHAEIAAAAKAAQAAgAGAEEAAAAKAAUAAgAGAEIAAAALAAQAAgAHAEEAAAALAAUAAgAHAEIAAAAIAAIAAgAMAEEAAAAIAAMAAgAMAEIAAAAJAAIAAgANAEEAAAAJAAMAAgANAEIAAAAMAPz/AgAMAEEAAAAMAP3/AgAMAEIAAAANAPz/AgANAEEAAAANAP3/AgANAEIAAAAGAP//AgAMAEEAAAAGAAAAAgAMAEIAAAAHAP//AgANAEEAAAAHAAAAAgANAEIAAAD4/wYAAgAMAEEAAAD4/wcAAgAMAEIAAAD5/wYAAgANAEEAAAD5/wcAAgANAEIAAAD7/wIAAgAMAEEAAAD7/wMAAgAMAEIAAAD8/wIAAgANAEEAAAD8/wMAAgANAEIAAAD7//z/AgAMAEEAAAD7//3/AgAMAEIAAAD8//z/AgANAEEAAAD8//3/AgANAEIAAADz/wYAAgAGAD4AAADz/wcAAgAGAD8AAADz/wEAAgAGAD4AAADz/wIAAgAGAD8AAADz//7/AgAGAD4AAADz////AgAGAD8AAAD2//z/AgAGAD4AAAD2//3/AgAGAD8AAAD5//7/AgAGAD4AAAD5////AgAGAD8AAAD8//7/AgAGAD4AAAD8////AgAGAD8AAAD5//z/AgAGAD4AAAD5//3/AgAGAD8AAAAAAP//AgAGAD4AAAAAAAAAAgAGAD8AAAACAP//AgAGAD4AAAACAAAAAgAGAD8AAAAEAP7/AgAGAD4AAAAEAP//AgAGAD8AAAAEAPz/AgAGAD4AAAAEAP3/AgAGAD8AAAAAAPz/AgAGAD4AAAAAAP3/AgAGAD8AAAAJAPz/AgAGAD4AAAAJAP3/AgAGAD8AAAAIAP7/AgAGAD4AAAAIAP//AgAGAD8AAAAMAAAAAgAGAD4AAAAMAAEAAgAGAD8AAAAKAP7/AgAGAD4AAAAKAP//AgAGAD8AAAAJAP//AgAGAD4AAAAJAAAAAgAGAD8AAAALAPz/AgAGAD4AAAALAP3/AgAGAD8AAAANAAYAAgAGAD4AAAANAAcAAgAGAD8AAAAMAAQAAgAGAD4AAAAMAAUAAgAGAD8AAAANAAMAAgAGAD4AAAANAAQAAgAGAD8AAAANAAEAAgAGAD4AAAANAAIAAgAGAD8AAAAHAAUAAgAGAD4AAAAHAAYAAgAGAD8AAAAFAAIAAgAGAD4AAAAFAAMAAgAGAD8AAAAKAAAAAgAGADwAAAALAAAAAgAHADwAAAAHAPz/AgAGADwAAAAIAPz/AgAHADwAAAAFAPz/AgAGADwAAAAGAPz/AgAHADwAAAD0//3/AgAGADwAAAD1//3/AgAHADwAAADz/wAAAgAGADwAAAD0/wAAAgAHADwAAAD3/wAAAgAGADwAAAD4/wAAAgAHADwAAAD3/wMAAgAGADwAAAD4/wMAAgAHADwAAAD2/wYAAgAGADwAAAD3/wYAAgAHADwAAAD0/wcAAgAGADwAAAD1/wcAAgAHADwAAAD6/wcAAgAGADwAAAD7/wcAAgAHADwAAAD8/wUAAgAGADwAAAD9/wUAAgAHADwAAAD+/wcAAgAGADwAAAD//wcAAgAHADwAAAAAAAcAAgAGADwAAAABAAcAAgAHADwAAAABAAUAAgAGADwAAAACAAUAAgAHADwAAAAEAAQAAgAGADwAAAAFAAQAAgAHADwAAAAFAAUAAgAGADwAAAAGAAUAAgAHADwAAAAHAAcAAgAGADwAAAAIAAcAAgAHADwAAAALAAcAAgAGADwAAAAMAAcAAgAHADwAAAD+/wIAAgAGADwAAAD//wIAAgAHADwAAAD0//z/AgAGADwAAAD1//z/AgAHADwAAADz/wUAAgAGADoAAAD1/wQAAgAGADoAAAD1/wIAAgAGADoAAAD1/wEAAgAGADoAAAD7/wUAAgAGADoAAAD7/wQAAgAGADoAAAD8/wQAAgAGADoAAAD+/wYAAgAGADoAAAD+/wUAAgAGADoAAAABAAYAAgAGADoAAAADAAUAAgAGADoAAAAEAAcAAgAGADoAAAAIAAYAAgAGADoAAAANAAUAAgAGADoAAAAKAAIAAgAGADoAAAAKAAMAAgAGADoAAAALAAEAAgAGADoAAAANAP7/AgAGADoAAAAIAAAAAgAGADoAAAAIAAEAAgAGADoAAAAJAP7/AgAGADoAAAAHAP7/AgAGADoAAAAGAAEAAgAGADoAAAAGAAIAAgAGADoAAAAFAP//AgAGADoAAAADAP//AgAGADoAAAACAAIAAgAGADoAAAACAAEAAgAGADoAAAAEAAMAAgAGADoAAAAAAAMAAgAGADoAAAAAAAQAAgAGADoAAAD9/wIAAgAGADoAAAD+/wAAAgAGADoAAAD+/wEAAgAGADoAAAD9////AgAGADoAAAABAP//AgAGADoAAAABAAAAAgAGADoAAAAAAP7/AgAGADoAAAADAPz/AgAGADoAAAD9//z/AgAGADoAAAD7//7/AgAGADoAAAD6//7/AgAGADoAAAD2//7/AgAGADoAAAD2////AgAGADoAAAAQAPr/AgAHAAIAAAAQAPv/AgAHAAMAAAARAPr/AgAHAAIAAAARAPv/AgAHAAMAAAASAPr/AgAHAAIAAAASAPv/AgAHAAMAAAATAPr/AgAHAAIAAAATAPv/AgAHAAMAAAAQAPn/AgAOAAUAAAARAPn/AgARAAUAAAASAPn/AgAUAAUAAAATAPn/AgAVAAUAAAAUAPn/AgAKAAUAAAAUAPr/AgAKAAYAAAAUAPv/AgAKAAcAAAAUAPz/AgAKAAgAAAAUAP3/AgAKAAYAAAAUAP7/AgAKAAcAAAAUAP//AgAKAAgAAAAPAAgAAgAIAA0AAAAQAAgAAgAJAA0AAAARAAgAAgAIAA0AAAASAAgAAgAIAA0AAAATAAgAAgAJAA0AAAAUAAgAAgAKAA0AAAAUAAcAAgABAAkAAAAUAAYAAgABAAkAAAAUAAUAAgABAAkAAAAUAAQAAgABAAkAAAAUAAMAAgABAAkAAAAUAAIAAgABAAkAAAAUAAEAAgABAAkAAAAUAAAAAgABAAkAAAAPAPz/AgARAEEAAAAPAP3/AgARAEIAAAAQAPz/AgASAEEAAAAQAP3/AgASAEIAAAASAAEAAgARAEEAAAASAAIAAgARAEIAAAATAAEAAgASAEEAAAATAAIAAgASAEIAAAARAAUAAgARAEEAAAARAAYAAgARAEIAAAASAAUAAgASAEEAAAASAAYAAgASAEIAAAAPAAYAAgAZAEEAAAAPAAcAAgAZAEIAAAAQAAYAAgAaAEEAAAAQAAcAAgAaAEIAAAAPAAEAAgAZAEEAAAAPAAIAAgAZAEIAAAAQAAEAAgAaAEEAAAAQAAIAAgAaAEIAAAARAP3/AgAZAEEAAAARAP7/AgAZAEIAAAASAP3/AgAaAEEAAAASAP7/AgAaAEIAAAAQAAMAAgAGAEEAAAAQAAQAAgAGAEIAAAARAAMAAgAHAEEAAAARAAQAAgAHAEIAAAASAP//AgAGAEEAAAASAAAAAgAGAEIAAAATAP//AgAHAEEAAAATAAAAAgAHAEIAAAAPAP//AgAGAEEAAAAPAAAAAgAGAEIAAAAQAP//AgAHAEEAAAAQAAAAAgAHAEIAAAAPAAQAAgAGAD4AAAAPAAUAAgAGAD8AAAARAP//AgAGAD4AAAARAAAAAgAGAD8AAAATAAMAAgAGAD4AAAATAAQAAgAGAD8AAAATAAYAAgAMAD4AAAATAAcAAgAMAD8AAAARAAcAAgAGADwAAAASAAcAAgAHADwAAAAPAP7/AgAGADwAAAAQAP7/AgAHADwAAAASAPz/AgAGADwAAAATAPz/AgAHADwAAAARAPz/AgAGADoAAAATAP3/AgARAD4AAAATAP7/AgARAD8AAAASAAMAAgARAD4AAAASAAQAAgARAD8AAAAPAAMAAgAGADoAAAAQAAUAAgAGADoAAAATAAUAAgAGADoAAAARAAEAAgAGADoAAAARAAIAAgARADoAAAAPAPj/AgANAAQAAAAQAPj/AgAOAAQAAAASAPj/AgAUAAQAAAATAPj/AgAVAAQAAAARAPj/AgARAAQAAAA=")
tile_set = ExtResource("2_pmap1")

[node name="WallDecoration" type="TileMapLayer" parent="."]
position = Vector2(-4, -4)
tile_map_data = PackedByteArray("AAD///r/AgAXACgAAAD///v/AgAXACkAAAAAAPr/AgAYACgAAAAAAPv/AgAYACkAAAABAPr/AgAZACgAAAABAPv/AgAZACkAAAD+//r/AgAPACsAAAD+//v/AgAPACwAAAACAPr/AgATACsAAAACAPv/AgATACwAAAAAAPj/AgAYACsAAAAAAPn/AgAYACwAAAABAPj/AgASACsAAAABAPn/AgASACwAAAD///j/AgAQACsAAAD///n/AgAQACwAAAD9//r/AgAkABUAAAD9//v/AgAkABYAAAADAPr/AgAkABUAAAADAPv/AgAkABYAAAD8//r/AgAXAC4AAAD8//v/AgAXAC8AAAAEAPr/AgAZAC4AAAAEAPv/AgAZAC8AAAACAPj/AgAYAC4AAAACAPn/AgAYAC8AAAD+//j/AgAYAC4AAAD+//n/AgAYAC8AAAD7/wQAAgABADwAAAACAAIAAgADADoAAAAHAAMAAgADADwAAADz/wcAAgABADwAAAD2/wUAAgABADoAAAD5//z/AgABADwAAAAKAAUAAgABADoAAAAKAP7/AgADADwAAAD9//z/AgADADoAAAANAAAAAgAUAA0AAAANAAEAAgAUAA4AAAANAAIAAgAUAA8AAAANAAMAAgAUABAAAAANAAQAAgAUABEAAAANAAUAAgAUABIAAAARAAcAAgABADwAAAATAAMAAgADADoAAAAPAAAAAgADADwAAAATAP//AgABADoAAAAQAPr/AgAXADEAAAAQAPv/AgAXADIAAAASAPr/AgAZADEAAAASAPv/AgAZADIAAAATAPr/AgASADEAAAATAPv/AgASADIAAAAPAPr/AgAQADEAAAAPAPv/AgAQADIAAAA=")
tile_set = ExtResource("2_pmap1")

[node name="Props" type="TileMapLayer" parent="."]
position = Vector2(-4, -4)
tile_map_data = PackedByteArray("AAAGAPf/AAAiABEAAAAGAPj/AAAiABIAAAAGAPn/AAAiABMAAAAHAPj/AAAjABIAAAD5//j/AAAdABIAAAD6//f/AAAeABEAAAD6//j/AAAeABIAAAD6//n/AAAeABMAAAD4//f/AAAuABEAAAD4//j/AAAuABIAAAD4//n/AAAuABMAAAANAPf/AAAuABEAAAANAPj/AAAuABIAAAANAPn/AAAuABMAAAD9//z/AAAHAAEAAAD9//3/AAAdAAgAAAD+//v/AAAeAAYAAAD+//z/AAAeAAcAAAD+//3/AAAeAAgAAAD+//7/AAAeAAkAAAD///3/AAAfAAgAAAABAP3/AAAhAAgAAAACAPv/AAAiAAYAAAACAPz/AAAiAAcAAAACAP3/AAAiAAgAAAACAP7/AAAiAAkAAAADAPz/AAAIAAEAAAADAP3/AAAjAAgAAAD6//z/AAAEAAEAAAD7//v/AAAFAAAAAAD7//z/AAAFAAEAAAD7//3/AAAFAAIAAAD7//7/AAAFAAMAAAD8//v/AAAGAAAAAAD8//z/AAAGAAEAAAD8//3/AAAGAAIAAAD8//7/AAAGAAMAAAAEAPv/AAAJAAAAAAAEAPz/AAAJAAEAAAAEAP3/AAAJAAIAAAAEAP7/AAAJAAMAAAAFAPv/AAAKAAAAAAAFAPz/AAAKAAEAAAAFAP3/AAAKAAIAAAAFAP7/AAAKAAMAAAAGAPz/AAALAAEAAAD5/wAAAAAdAAwAAAD5/wEAAAAdAA0AAAD6////AAAeAAsAAAD6/wAAAAAeAAwAAAD6/wEAAAAeAA0AAAD6/wIAAAAeAA4AAAD7/wAAAAAfAAwAAAD7/wEAAAAfAA0AAAD7/wIAAAAFAAoAAAAFAAAAAAAhAAwAAAAFAAEAAAAhAA0AAAAGAAAAAAAiAAwAAAAGAAEAAAAiAA0AAAAGAAIAAAAiAA4AAAAHAAAAAAAjAAwAAAAHAAEAAAAjAA0AAAADAAQAAAAMAAwAAAADAAUAAAAMAA0AAAADAAYAAAAMAA4AAAAEAAIAAAANAAoAAAAEAAMAAAANAAsAAAAEAAQAAAANAAwAAAAEAAUAAAANAA0AAAAEAAYAAAANAA4AAAAFAAIAAAAOAAoAAAAFAAMAAAAOAAsAAAAFAAQAAAAOAAwAAAAFAAUAAAAOAA0AAAAFAAYAAAAOAA4AAAD6/wUAAAAEAA0AAAD6/wYAAAAEAA4AAAD7/wMAAAAFAAsAAAD7/wQAAAAFAAwAAAD7/wUAAAAFAA0AAAD7/wYAAAAFAA4AAAD8/wIAAAAGAAoAAAD8/wMAAAAGAAsAAAD8/wQAAAAGAAwAAAD8/wUAAAAGAA0AAAD8/wYAAAAGAA4AAAD8/wcAAAAGAA8AAAD9/wMAAAAHAAsAAAD9/wQAAAAHAAwAAAD9/wUAAAAHAA0AAAD9/wYAAAAHAA4AAAA=")
tile_set = ExtResource("2_pmap1")

[node name="Ground4" type="TileMapLayer" parent="."]
position = Vector2(-4, -4)
tile_set = ExtResource("2_pmap1")

[node name="UndeadPawns" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
zoom = Vector2(5, 5)

[node name="SnatchingAltar" parent="." instance=ExtResource("3_67fs2")]

[node name="Book" parent="." instance=ExtResource("4_dbjdk")]
position = Vector2(136, -36)

[node name="Vampire" parent="." instance=ExtResource("5_twcoo")]
position = Vector2(0, 21)

[node name="BookAreaEntry" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BookAreaEntry"]
position = Vector2(112, 20)
shape = SubResource("RectangleShape2D_1jt2e")

[node name="BookAreaExit" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BookAreaExit"]
position = Vector2(96, 20)
shape = SubResource("RectangleShape2D_w3mv4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BookAreaExit"]
position = Vector2(104, 32)
shape = SubResource("RectangleShape2D_urin5")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BookAreaExit"]
position = Vector2(104, 8)
shape = SubResource("RectangleShape2D_urin5")

[node name="ExclamationMark" parent="." instance=ExtResource("6_3vlo2")]
z_index = 20
position = Vector2(0, -9)
script = ExtResource("7_mvla2")

[node name="GoRightMarker" parent="." instance=ExtResource("8_0cija")]
position = Vector2(99, 24)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource("9_a2ftn")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "The Lich is responsible for taking care of the undeads. 

They can snatch souls from the living to extract Soul Essences from them. After a while the soul will dissipate. 

Why is the Lich snatching souls from the Ranger's domain ?

Well, it's hard to explain for people who don't understand how magic works. But this is how it is. 



Use the Altar to Snatch Souls from the Ranger's Domain. 



The Lich can use Soul Essences for many things. You should try using the book."

[node name="CloseModal" type="Button" parent="CanvasLayer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
theme = ExtResource("10_d2kn4")
theme_type_variation = &"FlatButton"
text = "x"
